src/objects/Practice_Contact__c.object
<CustomObject>
    <description>A list of alternate contacts at a doctors office</description>
    <fields>
        <fullName>Alternate_Phone_Number__c</fullName>
        <description>Alternate Phone # for the practice alternate contact</description>
        <label>Alternate Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Practice__c</fullName>
        <description>Dental practice the contact is tied to</description>
        <label>Dental Practice</label>
        <referenceTo>Dental_Practice__c</referenceTo>
        <relationshipLabel>Practice Contacts</relationshipLabel>
        <relationshipName>Practice_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Email Address for the practice alternate contact</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name for the practice alternate contact</description>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>Job Title for the practice alternate contact</description>
        <label>Job Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name for the practice alternate contact</description>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Phone number for the practice alternate contact</description>
        <label>Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Practice Contact</label>
    <nameField>
        <displayFormat>PCN-{0000}</displayFormat>
        <label>Practice Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practice Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>